stage 3 geometries